Changes for 1.2.7
* New Repair options. New unit attachment: <option name="repairsUnits" value="battleship:bunker"/> will cause the attached unit to repair units in the list. New game properties: "Battleships repair at beginning of round" and "Two HitPoint Units Require Repair Facilities". (veqryn)

* Created 2 new autosaves: autosave_round_even and autosave_round_odd, which will autosave at the beginning of each round. Provides only the last 2 rounds in order to keep file spam to a minimum. (veqryn)

* New Carrier-Fighter interleaver for AI casualty selection.  Another patch for Dynamix AI. (wisconsin)

* Fixed bug where the NoPuPurchase delegate was calling the normal Purchase delegate if the player had PUs left over, Resulting in the player getting multiple purchase screens. (veqryn)

* New game property, "Unit Placement Restrictions", and new Unit Attachment option, <option name="unitPlacementRestrictions" value="territory1:territory2"/>, prevent a unit or units from being placed in any given territory. (veqryn)

* Beginning work on Unit Placement Restrictions. (veqryn)

* Moore AI's casualty picking fixed to work with all maps, not just ww2vX maps. (veqryn)

* Caching of game data to speed up dynamix ai and multiple battle calcing in one turn.  And another patch for Dynamix AI. (wisconsin)

* Added new method for Moore AI to move unused transports back to factories. (wisconsin)

* Fix for Moore AI moving units towards capitals already conquered, and not letting units leave once they get there. (wisconsin)

* Fix for Null Pointer error in Moore AI's factory movement. (veqryn)

* Fix for Null Pointer error in Moore AI's movePlanesHomeNonCom. (veqryn)

* Fix for Moore AI's horrible purchasing of transportable land units, which often resulted in the purchase of no land units. This also fixes the 'moore ai buying too many sea transports' issue. (veqryn)
